--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
 </head>
   <body class="bg-brand-dark text-white font-sans antialiased selection:bg-brand-blue selection:text-white">
     <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
+  <script type="module" src="/src/index.tsx"></script>
 </body>
 </html>
